web-server-test/k8s-debug-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-debug
  template:
    metadata:
      labels:
        app: k8s-debug
    spec:
      containers:
      - name: k8s-debug
        image: registry.ocp.local:8443/init/mirror/joshua/k8s-debug:1.0
