web-server-test/route-web-svr.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: webtest
  name: console
spec:
  host: webtest.apps.prod.ocp.local
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: nginx-service
